--- a/assets/Admin/css/style.css
+++ b/assets/Admin/css/style.css
@@ -23,3 +23,5 @@
 
 .drop-box { width:400px; height:200px; text-align:center; line-height:200px; font-size:16px; border:1px solid #ccc;}
 .dragover { border:1px solid #f00;}
+
+.item:hover { background:#ccc; }
